// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductInfo should render ProductInfoCAB with the right props if product is CAB 1`] = `
<ProductInfoCAB
  descriptions={
    Array [
      Array [
        "descriptions0",
        "descriptions1",
      ],
      Array [
        "descriptions2",
      ],
    ]
  }
  marketingDescriptions={Object {}}
/>
`;

exports[`ProductInfo should render ProductInfoNOCAB with the right props if product is NOCAB 1`] = `
<ProductInfoNOCAB
  descriptions={
    Array [
      "descriptions0",
      "descriptions1",
      "descriptions2",
    ]
  }
/>
`;
